--- a/frontend/src/app/components/nav/nav-menu-register/nav-menu-register.component.css
+++ b/frontend/src/app/components/nav/nav-menu-register/nav-menu-register.component.css
@@ -164,7 +164,7 @@ button:hover {
   width: 100%;
 }
 
-.password-wrapper .fa-eye {
+.password-wrapper .fa-eye , .fa-eye-slash{
   position: absolute;
   right: 10px;
   top: 50%;
