--- a/frontend/src/app/components/nav/nav-menu-login/nav-menu-login.component.css
+++ b/frontend/src/app/components/nav/nav-menu-login/nav-menu-login.component.css
@@ -83,7 +83,7 @@ form {
 }
 
 
-.input-container .fa-eye {
+.input-container .fa-eye, .fa-eye-slash{
   position: absolute;
   right: 100px;
   top: 50%;
