Changing names and added changing password components

--- a/frontend/src/app/components/nav/navbar/navbar.component.html
+++ b/frontend/src/app/components/nav/navbar/navbar.component.html
@@ -21,7 +21,7 @@
   </div>
 
   <div class="menu" *ngIf="showMenu">
-    <app-nav-menu (menuClosed)="closeMenu()"></app-nav-menu>
+    <app-menu (menuClosed)="closeMenu()"></app-menu>
 
   </div>
 
