--- a/frontend/src/app/components/menu-components/menu-profile/menu-profile.component.css
+++ b/frontend/src/app/components/menu-components/menu-profile/menu-profile.component.css
@@ -6,6 +6,7 @@
   flex-direction: column;
   align-items: center;
   width: 100%;
+  padding: 0 30px 0 30px;
   height: auto;
   max-height: 90vh;
   min-height: 500px;
@@ -86,6 +87,25 @@ form {
   background-color: #e8e7e7;
 }
 
+.password-wrapper {
+  position: relative;
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+}
+
+.password-wrapper input {
+  width: 100%;
+}
+
+.password-wrapper .fa-eye , .fa-eye-slash{
+  position: absolute;
+  right: 10px;
+  top: 50%;
+  transform: translateY(-50%);
+  cursor: pointer;
+}
+
 button {
   width: 80%;
   background: #fd710c;
@@ -104,42 +124,27 @@ button:hover {
   background: #ce5c03;
 }
 
-.error-container {
+.password-container {
   display: flex;
   flex-direction: row;
   align-items: center;
   justify-content: center;
-  width: 90%;
-  height: auto;
-  color: red;
-}
-
-.error-container p {
-  font-size: 14px;
-  margin-left: 10px;
-}
-
-.last-container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  width: 80%;
+  width: 70%;
   height: auto;
 }
 
-.last-container h2 {
+.password-container h3 {
   color: #1c1a1a;
-  font-size: 20px;
-  margin-bottom: 10px;
-  text-decoration: underline;
+  font-size: 18px;
+  margin-right: 10px;
 }
 
-.last-container h2:hover {
+.password-container button {
+  border: none;
+  width: 30%;
+  font-size: 18px;
   cursor: pointer;
-  text-decoration: none;
 }
-
 
 
 @media (max-width: 1024px) {
