--- a/frontend/src/app/components/menu-components/menu/menu.component.html
+++ b/frontend/src/app/components/menu-components/menu/menu.component.html
@@ -1,6 +1,6 @@
 <div class="menu" *ngIf="!showLanguageMenu && !showRegister && !showLogin && !showProfile">
   <div class="menu-first">
-      <h2 *ngIf="!checkAuth(); else notAuth"> {{getTranslation('myAccount')}} </h2>
+    <h2 *ngIf="!checkAuth(); else notAuth"> {{getTranslation('myAccount')}} </h2>
     <ng-template #notAuth>
       <h2> {{name}}</h2>
     </ng-template>
@@ -41,10 +41,10 @@
 
 </div>
 
-<app-nav-menu-language *ngIf="showLanguageMenu" (closeLanguageMenu)="toggleLanguageMenu()"></app-nav-menu-language>
-<app-nav-menu-register *ngIf="showRegister" (closeRegistry)="toggleRegister()" (openLogin)="toggleLogin()"></app-nav-menu-register>
-<app-nav-menu-login *ngIf="showLogin" (closeLogin)="toggleLogin()" (openRegistry)="toggleRegister()"></app-nav-menu-login>
-<app-nav-menu-profile *ngIf="showProfile" (closeProfile)="toggleProfile()" ></app-nav-menu-profile>
+<app-menu-language *ngIf="showLanguageMenu" (closeLanguageMenu)="toggleLanguageMenu()"></app-menu-language>
+<app-menu-register *ngIf="showRegister" (closeRegistry)="toggleRegister()" (openLogin)="toggleLogin()"></app-menu-register>
+<app-menu-login *ngIf="showLogin" (closeLogin)="toggleLogin()" (openRegistry)="toggleRegister()"></app-menu-login>
+<app-menu-profile *ngIf="showProfile" (closeProfile)="toggleProfile()" ></app-menu-profile>
 
 
 
