Changed view components to routes

--- a/frontend/src/app/components/home/home.component.html
+++ b/frontend/src/app/components/home/home.component.html
@@ -1,5 +1,7 @@
 <div class="home-container">
 
+  <div class="overlay" [ngClass]="{'dimmed': isDimmed}"></div>
+
   <div class="first-section">
     <app-home-first-section></app-home-first-section>
   </div>
@@ -12,6 +14,9 @@
   <div class="third-section">
     <app-home-third-section></app-home-third-section>
   </div>
+
+  <router-outlet></router-outlet>
+
 
 </div>
 
