--- a/frontend/src/app/components/menu-components/menu-language/menu-language.component.css
+++ b/frontend/src/app/components/menu-components/menu-language/menu-language.component.css
@@ -5,14 +5,16 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 80%;
-  height: 100%;
+  width: 700px;
+  height: auto;
+  padding: 10px 30px;
   text-align: center;
   position: fixed;
   background-color: #fff;
   border: 1px solid #ccc;
   z-index: 100;
   border-radius: 30px;
+  font-family: 'Fira Sans', sans-serif;
 }
 
 .first-section {
