--- a/frontend/src/app/components/menu-components/menu-profile/menu-profile.component.html
+++ b/frontend/src/app/components/menu-components/menu-profile/menu-profile.component.html
@@ -1,6 +1,6 @@
 <div class="profile-menu">
   <div class="first-section">
-    <i class="fa-solid fa-chevron-left" (click)="backToMenu()"></i>
+    <i class="fa-solid fa-chevron-left" [routerLink]="['/menu']"></i>
     <h2>{{getTranslation('profile')}}</h2>
   </div>
   <div class="input-container">
