--- a/frontend/src/app/components/home/home.component.css
+++ b/frontend/src/app/components/home/home.component.css
@@ -7,12 +7,27 @@
   width: 100%;
   box-shadow: 10px 10px 40px rgba(0, 0, 0, 0.8);
   font-family: 'Raleway', sans-serif;
+}
 
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  padding: 0;
+  background-color: rgba(0, 0, 0, 0); /* Brak przyciemnienia domyślnie */
+  transition: background-color 0.5s ease; /* Płynne przejście */
+  z-index: 1; /* Nakładka nad wszystkim */
+}
+
+.overlay.dimmed {
+  background-color: rgba(0, 0, 0, 0.5); /* Przyciemnienie */
 }
 
 .first-section {
   width: 100%;
-  height: auto;
+  height: 500px;
   padding-top: 100px;
   padding-bottom: 100px;
   display: flex;
