--- a/frontend/src/app/components/menu-components/menu-language/menu-language.component.html
+++ b/frontend/src/app/components/menu-components/menu-language/menu-language.component.html
@@ -1,6 +1,6 @@
 <div class="language-menu">
   <div class="first-section">
-    <i class="fa-solid fa-chevron-left" (click)="closeMenu()"></i>
+    <i class="fa-solid fa-chevron-left" [routerLink]="['/menu']"></i>
     <h2>{{getTranslation('language')}}</h2>
   </div>
   <div class="language-item" (click)="setLanguage('pl')">
