--- a/frontend/src/app/components/menu-components/menu-login/menu-login.component.html
+++ b/frontend/src/app/components/menu-components/menu-login/menu-login.component.html
@@ -1,6 +1,6 @@
 <div class="login-menu">
   <div class="first-section">
-    <i class="fa-solid fa-chevron-left" (click)="backToMenu()"></i>
+    <i class="fa-solid fa-chevron-left" [routerLink]="['/menu']"></i>
     <h2>{{getTranslation('login')}}</h2>
   </div>
   <form [formGroup]="loginForm" (ngSubmit)="login()">
@@ -10,8 +10,10 @@
     </div>
     <div class="input-container">
       <label for="password">{{getTranslation('password')}}</label>
-      <input id="password" type="password" formControlName="password" name="password" placeholder="{{getTranslation('password')}}" autocomplete="new-password" required>
-      <i class="fa-solid" [ngClass]="isVisible ? 'fa-eye-slash' : 'fa-eye'"  (click)="togglePasswordVisibility('password')"></i>
+      <div class="password-wrapper">
+        <input id="password" type="password" formControlName="password" name="password" placeholder="{{getTranslation('password')}}" autocomplete="new-password" required>
+        <i class="fa-solid" [ngClass]="isVisible ? 'fa-eye-slash' : 'fa-eye'" (click)="togglePasswordVisibility('password')"></i>
+      </div>
     </div>
 
     <div class="error-container" *ngIf="isloginError">
@@ -22,7 +24,7 @@
     <button type="submit">{{getTranslation('login')}}</button>
 
     <div class="last-container">
-      <h2 (click)="changeToRegister()"> {{getTranslation('createAccount')}}</h2>
+      <h2 [routerLink]="['/register']"> {{getTranslation('createAccount')}}</h2>
     </div>
   </form>
 
