--- a/frontend/src/app/components/menu-components/menu-profile/menu-profile.component.css
+++ b/frontend/src/app/components/menu-components/menu-profile/menu-profile.component.css
@@ -5,17 +5,18 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 100%;
-  padding: 0 30px 0 30px;
+  width: 700px;
   height: auto;
-  max-height: 90vh;
-  min-height: 500px;
+  min-height: 420px;
+  padding: 10px 30px;
   text-align: center;
   position: fixed;
   background-color: #fff;
   border: 1px solid #ccc;
   z-index: 100;
   border-radius: 30px;
+  font-family: 'Fira Sans', sans-serif;
+
 }
 
 .first-section {
