--- a/frontend/src/app/components/menu-components/menu-register/menu-register.component.css
+++ b/frontend/src/app/components/menu-components/menu-register/menu-register.component.css
@@ -5,7 +5,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 100%;
+  width: 700px;
   height: auto;
   max-height: 90vh;
   text-align: center;
@@ -14,6 +14,8 @@
   border: 1px solid #ccc;
   z-index: 100;
   border-radius: 30px;
+  font-family: 'Fira Sans', sans-serif;
+
 }
 
 .first-section {
