--- a/frontend/src/app/components/menu-components/menu/menu.component.html
+++ b/frontend/src/app/components/menu-components/menu/menu.component.html
@@ -1,50 +1,47 @@
-<div class="menu" *ngIf="!showLanguageMenu && !showRegister && !showLogin && !showProfile">
-  <div class="menu-first">
-    <h2 *ngIf="!checkAuth(); else notAuth"> {{getTranslation('myAccount')}} </h2>
-    <ng-template #notAuth>
-      <h2> {{name}}</h2>
-    </ng-template>
-    <i class="fa-regular fa-circle-xmark" (click)="closeMenu()"></i>
-  </div>
-  <div class="menu-login" *ngIf="!checkAuth()">
-    <button class="registry-button" (click)="toggleRegister()"> {{getTranslation('createAccount')}} </button>
-    <button class="login-button" (click)="toggleLogin()"> {{getTranslation('login')}}  </button>
-  </div>
-  <div class="menu-item" (click)="toggleProfile()">
-    <i class="fa-solid fa-user"></i>
-    <h3>{{getTranslation('profile')}}</h3>
-  </div>
-  <div class="menu-item">
-    <i class="fa-solid fa-bag-shopping"></i>
-    <h3>{{getTranslation('orders')}}</h3>
-  </div>
-  <div class="menu-item">
-    <i class="fa-solid fa-heart"></i>
-    <h3>{{getTranslation('favourites')}}</h3>
-  </div>
-  <div class="menu-item">
-    <i class="fa-solid fa-comment-dots"></i>
-    <h3>{{getTranslation('opinions')}}</h3>
-  </div>
-  <div class="menu-item">
-    <i class="fa-solid fa-circle-question"></i>
-    <h3>{{getTranslation('help')}}</h3>
-  </div>
-  <div class="menu-item" *ngIf="showLanguageOption" (click)="toggleLanguageMenu()">
-    <i class="fa-solid fa-language"></i>
-    <h3>{{getTranslation('changeLanguage')}}</h3>
-  </div>
-  <div class="menu-item" *ngIf="checkAuth()" (click)="logout()">
-    <i class="fa-solid fa-sign-out" ></i>
-    <h3>{{getTranslation('logout')}}</h3>
+  <div class="menu">
+    <div class="menu-first">
+      <h2 *ngIf="!checkAuth(); else notAuth"> {{getTranslation('myAccount')}} </h2>
+      <ng-template #notAuth>
+        <h2> {{name}}</h2>
+      </ng-template>
+      <i class="fa-regular fa-circle-xmark" [routerLink]="['']"></i>
+    </div>
+    <div class="menu-login" *ngIf="!checkAuth()">
+      <button class="registry-button" [routerLink]="['/register']"> {{getTranslation('createAccount')}} </button>
+      <button class="login-button" [routerLink]="['/login']"> {{getTranslation('login')}}  </button>
+    </div>
+    <div class="menu-item" [routerLink]="checkAuth() ? ['/menu-profile'] : ['/login']">
+      <i class="fa-solid fa-user"></i>
+      <h3>{{getTranslation('profile')}}</h3>
+    </div>
+    <div class="menu-item">
+      <i class="fa-solid fa-bag-shopping"></i>
+      <h3>{{getTranslation('orders')}}</h3>
+    </div>
+    <div class="menu-item">
+      <i class="fa-solid fa-heart"></i>
+      <h3>{{getTranslation('favourites')}}</h3>
+    </div>
+    <div class="menu-item">
+      <i class="fa-solid fa-comment-dots"></i>
+      <h3>{{getTranslation('opinions')}}</h3>
+    </div>
+    <div class="menu-item" *ngIf="showLanguageOption" [routerLink]="['/menu-language']">
+      <i class="fa-solid fa-language"></i>
+      <h3>{{getTranslation('changeLanguage')}}</h3>
+    </div>
+    <div class="menu-item">
+      <i class="fa-solid fa-circle-question"></i>
+      <h3>{{getTranslation('help')}}</h3>
+    </div>
+    <div class="menu-item" *ngIf="checkAuth()" (click)="logout()">
+      <i class="fa-solid fa-sign-out" ></i>
+      <h3>{{getTranslation('logout')}}</h3>
+    </div>
+
   </div>
 
-</div>
 
-<app-menu-language *ngIf="showLanguageMenu" (closeLanguageMenu)="toggleLanguageMenu()"></app-menu-language>
-<app-menu-register *ngIf="showRegister" (closeRegistry)="toggleRegister()" (openLogin)="toggleLogin()"></app-menu-register>
-<app-menu-login *ngIf="showLogin" (closeLogin)="toggleLogin()" (openRegistry)="toggleRegister()"></app-menu-login>
-<app-menu-profile *ngIf="showProfile" (closeProfile)="toggleProfile()" ></app-menu-profile>
 
 
 
