--- a/frontend/src/app/components/nav/navbar/navbar.component.css
+++ b/frontend/src/app/components/nav/navbar/navbar.component.css
@@ -72,7 +72,6 @@
   display: flex;
   align-items: center;
   flex-direction: row;
-
 }
 
 .logo {
@@ -85,26 +84,11 @@
 .material-icons {
   font-size: 30px;
   color: #1c1a1a;
+  cursor: pointer;
+
 }
 
 
-.menu {
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%); /* Center the element */
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  width: 600px;
-  height: auto;
-  padding: 10px 30px;
-  text-align: center;
-  position: fixed;
-  background-color: #fff;
-  border: 1px solid #ccc;
-  z-index: 100;
-  border-radius: 30px;
-}
 
 .overlay {
   position: fixed;
