Added changing password

--- a/frontend/src/app/components/menu-components/menu-change-password/menu-change-password.component.html
+++ b/frontend/src/app/components/menu-components/menu-change-password/menu-change-password.component.html
@@ -1,24 +1,50 @@
-<div class="input-container">
-  <h3>{{getTranslation('changePassword')}}</h3>
-  <label for="oldPassword">{{getTranslation('oldPassword')}}</label>
-  <div class="password-wrapper">
-    <input id="oldPassword" type="password" name="oldPassword" placeholder="{{getTranslation('oldPassword')}}"  [(ngModel)]="oldPassword" autocomplete="new-password" required>
-    <i class="fa-solid" [ngClass]="isVisibleOldPassword ? 'fa-eye-slash' : 'fa-eye'" (click)="togglePasswordVisibility('oldPassword')"></i>
+<div class="profile-menu">
+  <div class="first-section">
+    <i class="fa-solid fa-chevron-left" [routerLink]="['/menu-profile']"></i>
+    <h2>{{getTranslation('changePassword')}}</h2>
+    <i class="fa-regular fa-circle-xmark" [routerLink]="['']"></i>
   </div>
-</div>
 
-<div class="input-container">
-  <label for="newPassword">{{getTranslation('newPassword')}}</label>
-  <div class="password-wrapper">
-    <input id="newPassword" type="password" name="newPassword" placeholder="{{getTranslation('newPassword')}}" [(ngModel)]="newPassword" autocomplete="new-password" required>
-    <i class="fa-solid" [ngClass]="isVisibleNewPassword ? 'fa-eye-slash' : 'fa-eye'" (click)="togglePasswordVisibility('newPassword')"></i>
-  </div>
-</div>
+  <form [formGroup]="resetForm" (ngSubmit)="changePassword()">
+    <div class="input-container">
+      <label for="oldPassword">{{getTranslation('oldPassword')}}</label>
+      <div class="password-wrapper">
+        <input id="oldPassword" type="password" formControlName="oldPassword" name="oldPassword" placeholder="{{getTranslation('oldPassword')}}" autocomplete="new-password" required>
+        <i class="fa-solid" [ngClass]="isVisibleOldPassword ? 'fa-eye-slash' : 'fa-eye'" (click)="togglePasswordVisibility('oldPassword')"></i>
+      </div>
+    </div>
 
-<div class="input-container">
-  <label for="confirmPassword">{{getTranslation('confirmPassword')}}</label>
-  <div class="password-wrapper">
-    <input id="confirmPassword" type="password" name="confirmPassword" placeholder="{{getTranslation('confirmPassword')}}" [(ngModel)]="confirmPassword" autocomplete="new-password" required>
-    <i class="fa-solid" [ngClass]="isVisibleConfirm ? 'fa-eye-slash' : 'fa-eye'" (click)="togglePasswordVisibility('confirmPassword')"></i>
-  </div>
+    <div class="input-container">
+      <label for="newPassword">{{getTranslation('newPassword')}}</label>
+      <div class="password-wrapper">
+        <input id="newPassword" type="password" formControlName="newPassword" name="newPassword" placeholder="{{getTranslation('newPassword')}}" autocomplete="new-password" required>
+        <i class="fa-solid" [ngClass]="isVisibleNewPassword ? 'fa-eye-slash' : 'fa-eye'" (click)="togglePasswordVisibility('newPassword')"></i>
+      </div>
+      <div class="error-container" *ngIf="showErrorFor('newPassword')">
+        <i class="fa-solid fa-circle-exclamation"></i>
+        <p>{{getTranslation('passwordError')}}</p>
+      </div>
+    </div>
+
+    <div class="input-container">
+      <label for="confirmPassword">{{getTranslation('confirmPassword')}}</label>
+      <div class="password-wrapper">
+        <input id="confirmPassword" type="password" formControlName="confirmPassword" name="confirmPassword" placeholder="{{getTranslation('confirmPassword')}}" autocomplete="new-password" required>
+        <i class="fa-solid" [ngClass]="isVisibleConfirm ? 'fa-eye-slash' : 'fa-eye'" (click)="togglePasswordVisibility('confirmPassword')"></i>
+      </div>
+      <div class="error-container" *ngIf=" showErrorFor('confirmPassword')">
+        <i class="fa-solid fa-circle-exclamation"></i>
+        <p>{{getTranslation('confirmPasswordError')}}</p>
+      </div>
+    </div>
+
+    <div class="error-container" *ngIf=isError>
+      <i class="fa-solid fa-circle-exclamation"></i>
+      <p>{{getTranslation('changePasswordError')}}</p>
+    </div>
+
+    <button type="submit" [ngClass]="{'invalid-button': !resetForm.valid}">{{getTranslation('createAccount')}}</button>
+
+  </form>
+
 </div>
