--- a/frontend/src/app/components/home/home.component.css
+++ b/frontend/src/app/components/home/home.component.css
@@ -16,13 +16,13 @@
   width: 100%;
   height: 100%;
   padding: 0;
-  background-color: rgba(0, 0, 0, 0); /* Brak przyciemnienia domyślnie */
-  transition: background-color 0.5s ease; /* Płynne przejście */
-  z-index: 1; /* Nakładka nad wszystkim */
+  background-color: rgba(0, 0, 0, 0);
+  transition: background-color 0.5s ease;
 }
 
 .overlay.dimmed {
-  background-color: rgba(0, 0, 0, 0.5); /* Przyciemnienie */
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: 2;
 }
 
 .first-section {
