--- a/frontend/src/app/components/menu-components/menu/menu.component.css
+++ b/frontend/src/app/components/menu-components/menu/menu.component.css
@@ -98,7 +98,7 @@
   border-radius: 10px;
 }
 
-.fa-bag-shopping, .fa-heart, .fa-user, .fa-comment-dots, .fa-language, .fa-circle-question, .fa-sign-out {
+.fa-bag-shopping, .fa-heart, .fa-user, .fa-comment-dots, .fa-language, .fa-circle-question, .fa-sign-out, .fa-house {
   font-size: 20px;
   color: #ff6200;
   padding: 20px;
