--- a/frontend/src/app/components/menu-components/menu/menu.component.html
+++ b/frontend/src/app/components/menu-components/menu/menu.component.html
@@ -15,6 +15,10 @@
       <h3>{{getTranslation('profile')}}</h3>
     </div>
     <div class="menu-item">
+      <i class="fa-solid fa-house"></i>
+      <h3>{{getTranslation('addresses')}}</h3>
+    </div>
+    <div class="menu-item">
       <i class="fa-solid fa-bag-shopping"></i>
       <h3>{{getTranslation('orders')}}</h3>
     </div>
