Added add address

--- a/frontend/src/app/components/menu-components/menu-change-password/menu-change-password.component.html
+++ b/frontend/src/app/components/menu-components/menu-change-password/menu-change-password.component.html
@@ -1,4 +1,4 @@
-<div class="profile-menu">
+<div class="change-menu">
   <div class="first-section">
     <i class="fa-solid fa-chevron-left" [routerLink]="['/menu-profile']"></i>
     <h2>{{getTranslation('changePassword')}}</h2>
