--- a/frontend/src/app/components/menu-components/menu-add-address/menu-add-address.component.css
+++ b/frontend/src/app/components/menu-components/menu-add-address/menu-add-address.component.css
@@ -1,4 +1,4 @@
-.change-menu {
+.add-menu {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%); /* Center the element */
@@ -69,9 +69,9 @@ form {
 
 }
 
-.input-container {
+.address-container {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   align-items: center;
   justify-content: center;
   width: 80%;
@@ -79,44 +79,36 @@ form {
   margin-bottom: 20px;
 }
 
+.input-container {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: center;
+  width: 100%;
+  height: auto;
+
+}
+
 .input-container label {
   color: #1c1a1a;
-  align-self: flex-start; /* Ensure label is aligned to the start */
+  align-self: flex-start;
   margin-bottom: 10px;
   font-weight: bolder;
 }
 
 .input-container input {
-  width: 100%;
+  width: 80%;
   height: 40px;
   font-size: 18px;
   border-radius: 10px;
   padding: 5px 0 5px 10px;
 }
 
-.email-input {
-  color: #9f9d9d;
-  background-color: #e8e7e7;
+#phoneNumber {
+  width: 40%;
+
 }
 
-.password-wrapper {
-  position: relative;
-  width: 100%;
-  display: flex;
-  flex-direction: row;
-}
-
-.password-wrapper input {
-  width: 100%;
-}
-
-.password-wrapper .fa-eye , .fa-eye-slash{
-  position: absolute;
-  right: 10px;
-  top: 50%;
-  transform: translateY(-50%);
-  cursor: pointer;
-}
 
 .error-container {
   display: flex;
@@ -134,12 +126,12 @@ form {
 }
 
 button {
-  width: 70%;
+  width: 50%;
   background: #fd710c;
   color: white;
   height: 50px;
   border: none;
-  border-radius: 40px;
+  border-radius: 10px;
   font-size: 18px;
   cursor: pointer;
   font-weight: bolder;
@@ -148,42 +140,15 @@ button {
 }
 
 button:hover {
-  background: #ce5c03;
-}
-
-.invalid-button {
-  background-color: grey;
-}
-
-button:hover {
   background: #cb0505;
 }
 
-.password-container {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: center;
-  width: 70%;
-  height: auto;
-}
 
-.password-container h3 {
-  color: #1c1a1a;
-  font-size: 18px;
-  margin-right: 10px;
-}
 
-.password-container button {
-  border: none;
-  width: 30%;
-  font-size: 18px;
-  cursor: pointer;
-}
 
 
 @media (max-width: 1024px) {
-  .change-menu {
+  .add-menu {
     width: 100%;
     height: 100%;
     padding: 0;
