--- a/frontend/src/app/components/menu-components/menu-addresses/menu-addresses.component.css
+++ b/frontend/src/app/components/menu-components/menu-addresses/menu-addresses.component.css
@@ -1,4 +1,4 @@
-.change-menu {
+.addresses-menu {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%); /* Center the element */
@@ -183,7 +183,7 @@ button:hover {
 
 
 @media (max-width: 1024px) {
-  .change-menu {
+  .addresses-menu {
     width: 100%;
     height: 100%;
     padding: 0;
