--- a/frontend/src/app/components/menu-components/menu/menu.component.html
+++ b/frontend/src/app/components/menu-components/menu/menu.component.html
@@ -14,7 +14,7 @@
       <i class="fa-solid fa-user"></i>
       <h3>{{getTranslation('profile')}}</h3>
     </div>
-    <div class="menu-item">
+    <div class="menu-item" [routerLink]="['/addresses']">
       <i class="fa-solid fa-house"></i>
       <h3>{{getTranslation('addresses')}}</h3>
     </div>
