--- a/frontend/src/app/components/menu-components/menu-address-change/menu-address-change.component.css
+++ b/frontend/src/app/components/menu-components/menu-address-change/menu-address-change.component.css
@@ -1,4 +1,4 @@
-.add-menu {
+.change-menu {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%); /* Center the element */
@@ -144,11 +144,8 @@ button:hover {
 }
 
 
-
-
-
 @media (max-width: 1024px) {
-  .add-menu {
+  .change-menu {
     width: 100%;
     height: 100%;
     padding: 0;
