--- a/frontend/src/app/components/menu-components/menu-addresses/menu-addresses.component.css
+++ b/frontend/src/app/components/menu-components/menu-addresses/menu-addresses.component.css
@@ -16,6 +16,10 @@
   z-index: 100;
   border-radius: 30px;
   font-family: 'Fira Sans', sans-serif;
+  max-height: 90vh;
+  overflow-y: scroll; /* Enable vertical scrolling */
+  scrollbar-width: none; /* For Firefox */
+  -ms-overflow-style: none;  /* For Internet Explorer and Edge */
 
 }
 
@@ -25,7 +29,7 @@
   align-items: flex-start;
   justify-content: space-between;
   width: 80%;
-  height: 15%;
+  height: 10%;
   margin-bottom: 10px;
   margin-top: 10px;
 }
@@ -58,128 +62,35 @@
   color: #ff6200;
 }
 
-form {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  width: 90%;
-  height: auto;
-
-
-}
-
-.input-container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  width: 80%;
-  height: auto;
-  margin-bottom: 20px;
-}
-
-.input-container label {
-  color: #1c1a1a;
-  align-self: flex-start; /* Ensure label is aligned to the start */
+.addresses-container {
+  padding: 10px;
+  width: 500px;
   margin-bottom: 10px;
-  font-weight: bolder;
-}
-
-.input-container input {
-  width: 100%;
-  height: 40px;
-  font-size: 18px;
-  border-radius: 10px;
-  padding: 5px 0 5px 10px;
-}
-
-.email-input {
-  color: #9f9d9d;
-  background-color: #e8e7e7;
-}
-
-.password-wrapper {
-  position: relative;
-  width: 100%;
+  border-radius: 5px;
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
+  justify-content: space-between;
+
 }
 
-.password-wrapper input {
-  width: 100%;
-}
-
-.password-wrapper .fa-eye , .fa-eye-slash{
-  position: absolute;
-  right: 10px;
-  top: 50%;
-  transform: translateY(-50%);
-  cursor: pointer;
-}
-
-.error-container {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: center;
-  width: 90%;
-  height: auto;
-  color: red;
-}
-
-.error-container p {
-  font-size: 14px;
-  margin-left: 10px;
-}
 
 button {
   width: 70%;
   background: #fd710c;
   color: white;
-  height: 50px;
+  padding: 15px;
   border: none;
   border-radius: 40px;
   font-size: 18px;
   cursor: pointer;
   font-weight: bolder;
   margin-bottom: 20px;
-  margin-top: 30px;
-}
-
-button:hover {
-  background: #ce5c03;
-}
-
-.invalid-button {
-  background-color: grey;
 }
 
 button:hover {
   background: #cb0505;
 }
 
-.password-container {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: center;
-  width: 70%;
-  height: auto;
-}
-
-.password-container h3 {
-  color: #1c1a1a;
-  font-size: 18px;
-  margin-right: 10px;
-}
-
-.password-container button {
-  border: none;
-  width: 30%;
-  font-size: 18px;
-  cursor: pointer;
-}
 
 
 @media (max-width: 1024px) {
