--- a/frontend/src/app/components/menu-components/menu-addresses/menu-addresses.component.css
+++ b/frontend/src/app/components/menu-components/menu-addresses/menu-addresses.component.css
@@ -102,6 +102,11 @@ button:hover {
     max-height: 100%;
   }
 
+  .addresses-container {
+    width: 95%;
+    height: auto;
+  }
+
   .menu-first {
     margin-top: 10px;
   }
