--- a/frontend/src/app/components/menu-components/menu-profile/menu-profile.component.css
+++ b/frontend/src/app/components/menu-components/menu-profile/menu-profile.component.css
@@ -171,4 +171,9 @@ button:hover {
   .menu-first {
     margin-top: 10px;
   }
+
+  .password-container {
+    width: 100%;
+      flex-direction: column;
+  }
 }
