--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,2 +1,4 @@
-<app-navbar></app-navbar>
-<router-outlet></router-outlet>
+<div [ngClass]="{'no-scroll': isRouterOutletActive}">
+  <app-navbar></app-navbar>
+  <router-outlet></router-outlet>
+</div>
