Added restaurants models and addRestaurant

--- a/frontend/src/app/components/menu-components/menu-change-password/menu-change-password.component.html
+++ b/frontend/src/app/components/menu-components/menu-change-password/menu-change-password.component.html
@@ -43,7 +43,7 @@
       <p>{{getTranslation('changePasswordError')}}</p>
     </div>
 
-    <button type="submit" [ngClass]="{'invalid-button': !resetForm.valid}">{{getTranslation('createAccount')}}</button>
+    <button type="submit" [ngClass]="{'invalid-button': !resetForm.valid}">{{getTranslation('changePassword')}}</button>
 
   </form>
 
