--- a/frontend/src/app/components/home-components/home-first-section/home-first-section.component.html
+++ b/frontend/src/app/components/home-components/home-first-section/home-first-section.component.html
@@ -5,7 +5,7 @@
             <h2> {{getTranslation('home2')}}</h2>
             <div class="search-bar">
                 <input class="search-input" type="text" placeholder="{{getTranslation('address')}}">
-                <button >{{getTranslation('search')}}</button>
+                <button [routerLink]="['/restaurants/']">{{getTranslation('search')}}</button>
             </div>
         </div>
     </div>
