--- a/frontend/src/app/components/menu-components/menu-add-address/menu-add-address.component.html
+++ b/frontend/src/app/components/menu-components/menu-add-address/menu-add-address.component.html
@@ -1,8 +1,8 @@
 <div class="add-menu">
   <div class="first-section">
-    <i class="fa-solid fa-chevron-left" [routerLink]="['/addresses']"></i>
+    <i class="fa-solid fa-chevron-left" [routerLink]="[]" fragment="addresses"></i>
     <h2>{{getTranslation('addAddress')}}</h2>
-    <i class="fa-regular fa-circle-xmark" [routerLink]="['']"></i>
+    <i class="fa-regular fa-circle-xmark" (click)="removeFragment()"></i>
   </div>
 
   <form [formGroup]="addressForm" (ngSubmit)="addAddress()">
