--- a/frontend/src/app/components/menu-components/menu-addresses-item/menu-addresses-item.component.html
+++ b/frontend/src/app/components/menu-components/menu-addresses-item/menu-addresses-item.component.html
@@ -9,8 +9,8 @@
   </div>
 
   <div class="right-container">
-    <div class="edit-container" [routerLink]="['/change-address', address?.id]">
-      <h4>{{getTranslation('changeAddress')}}</h4>
+    <div class="edit-container" [routerLink]="[]" fragment="change-address" [queryParams]="{id: address?.id}">
+    <h4>{{getTranslation('changeAddress')}}</h4>
       <i class="fa-solid fa-pencil"></i>
     </div>
     <div class="delete-container" (click)="removeAddress()">
