--- a/frontend/src/app/components/menu-components/menu-change-password/menu-change-password.component.html
+++ b/frontend/src/app/components/menu-components/menu-change-password/menu-change-password.component.html
@@ -1,8 +1,8 @@
 <div class="change-menu">
   <div class="first-section">
-    <i class="fa-solid fa-chevron-left" [routerLink]="['/menu-profile']"></i>
+    <i class="fa-solid fa-chevron-left" [routerLink]="[]" fragment="menu-profile"></i>
     <h2>{{getTranslation('changePassword')}}</h2>
-    <i class="fa-regular fa-circle-xmark" [routerLink]="['']"></i>
+    <i class="fa-regular fa-circle-xmark" (click)="removeFragment()"></i>
   </div>
 
   <form [formGroup]="resetForm" (ngSubmit)="changePassword()">
