--- a/frontend/src/app/components/menu-components/menu-profile/menu-profile.component.html
+++ b/frontend/src/app/components/menu-components/menu-profile/menu-profile.component.html
@@ -1,8 +1,8 @@
 <div class="profile-menu">
   <div class="first-section">
-    <i class="fa-solid fa-chevron-left" [routerLink]="['/menu']"></i>
+    <i class="fa-solid fa-chevron-left" [routerLink]="[]" fragment="menu"></i>
     <h2>{{getTranslation('profile')}}</h2>
-    <i class="fa-regular fa-circle-xmark" [routerLink]="['']"></i>
+    <i class="fa-regular fa-circle-xmark" (click)="removeFragment()"></i>
   </div>
   <div class="input-container">
     <label for="name">{{getTranslation('name')}}</label>
@@ -17,7 +17,7 @@
 
   <div class="password-container">
     <h3>{{ getTranslation('wannaChangePassword') }}</h3>
-    <button [routerLink]="['/change-password']">{{getTranslation('clickHere')}} </button>
+    <button [routerLink]="[]" fragment="change-password">{{getTranslation('clickHere')}} </button>
   </div>
 
 </div>
