--- a/frontend/src/app/components/menu-components/menu-register/menu-register.component.html
+++ b/frontend/src/app/components/menu-components/menu-register/menu-register.component.html
@@ -1,8 +1,8 @@
 <div class="register-menu">
   <div class="first-section">
-    <i class="fa-solid fa-chevron-left" [routerLink]="['/menu']"></i>
+    <i class="fa-solid fa-chevron-left" [routerLink]="[]" fragment="menu"></i>
     <h2>{{getTranslation('createAccount')}}</h2>
-    <i class="fa-regular fa-circle-xmark" [routerLink]="['']"></i>
+    <i class="fa-regular fa-circle-xmark" (click)="removeFragment()"></i>
   </div>
   <div class="form-container">
     <form [formGroup]="registerForm" (ngSubmit)="register()">
@@ -46,7 +46,7 @@
         <p> {{getTranslation('registerAccept')}}</p>
       </div>
       <div class="last-container">
-        <h2 [routerLink]="['/login']"> {{getTranslation('haveAccount')}}</h2>
+        <h2 [routerLink]="[]" fragment="login"> {{getTranslation('haveAccount')}}</h2>
       </div>
     </form>
   </div>
