--- a/frontend/src/app/components/menu-components/menu/menu.component.html
+++ b/frontend/src/app/components/menu-components/menu/menu.component.html
@@ -1,51 +1,47 @@
-  <div class="menu">
-    <div class="menu-first">
-      <h2 *ngIf="!checkAuth(); else notAuth"> {{getTranslation('myAccount')}} </h2>
-      <ng-template #notAuth>
-        <h2> {{name}}</h2>
-      </ng-template>
-      <i class="fa-regular fa-circle-xmark" [routerLink]="['']"></i>
-    </div>
-    <div class="menu-login" *ngIf="!checkAuth()">
-      <button class="registry-button" [routerLink]="['/register']"> {{getTranslation('createAccount')}} </button>
-      <button class="login-button" [routerLink]="['/login']"> {{getTranslation('login')}}  </button>
-    </div>
-    <div class="menu-item" [routerLink]="checkAuth() ? ['/menu-profile'] : ['/login']">
-      <i class="fa-solid fa-user"></i>
-      <h3>{{getTranslation('profile')}}</h3>
-    </div>
-    <div class="menu-item" [routerLink]="['/addresses']">
-      <i class="fa-solid fa-house"></i>
-      <h3>{{getTranslation('addresses')}}</h3>
-    </div>
-    <div class="menu-item">
-      <i class="fa-solid fa-bag-shopping"></i>
-      <h3>{{getTranslation('orders')}}</h3>
-    </div>
-    <div class="menu-item">
-      <i class="fa-solid fa-heart"></i>
-      <h3>{{getTranslation('favourites')}}</h3>
-    </div>
-    <div class="menu-item">
-      <i class="fa-solid fa-comment-dots"></i>
-      <h3>{{getTranslation('opinions')}}</h3>
-    </div>
-    <div class="menu-item" *ngIf="showLanguageOption" [routerLink]="['/menu-language']">
-      <i class="fa-solid fa-language"></i>
-      <h3>{{getTranslation('changeLanguage')}}</h3>
-    </div>
-    <div class="menu-item">
-      <i class="fa-solid fa-circle-question"></i>
-      <h3>{{getTranslation('help')}}</h3>
-    </div>
-    <div class="menu-item" *ngIf="checkAuth()" (click)="logout()">
-      <i class="fa-solid fa-sign-out" ></i>
-      <h3>{{getTranslation('logout')}}</h3>
-    </div>
-
+<div class="menu">
+  <div class="menu-first">
+    <h2 *ngIf="!checkAuth(); else notAuth"> {{getTranslation('myAccount')}} </h2>
+    <ng-template #notAuth>
+      <h2> {{name}}</h2>
+    </ng-template>
+    <i class="fa-regular fa-circle-xmark" (click)="removeFragment()"></i>
   </div>
 
+  <div class="menu-login" *ngIf="!checkAuth()">
+    <button class="registry-button" [routerLink]="[]" fragment="register"> {{getTranslation('createAccount')}} </button>
+    <button class="login-button" [routerLink]="[]" fragment="login"> {{getTranslation('login')}}  </button>
+  </div>
+  <div class="menu-item" [routerLink]="[]" [fragment]="checkAuth() ? 'menu-profile' : 'login'">
+    <i class="fa-solid fa-user"></i>
+    <h3>{{getTranslation('profile')}}</h3>
+  </div>
+  <div class="menu-item" [routerLink]="[]" fragment="addresses">
+    <i class="fa-solid fa-house"></i>
+    <h3>{{getTranslation('addresses')}}</h3>
+  </div>
+  <div class="menu-item">
+    <i class="fa-solid fa-bag-shopping"></i>
+    <h3>{{getTranslation('orders')}}</h3>
+  </div>
+  <div class="menu-item">
+    <i class="fa-solid fa-heart"></i>
+    <h3>{{getTranslation('favourites')}}</h3>
+  </div>
+  <div class="menu-item">
+    <i class="fa-solid fa-comment-dots"></i>
+    <h3>{{getTranslation('opinions')}}</h3>
+  </div>
+  <div class="menu-item" *ngIf="showLanguageOption" [routerLink]="[]" fragment="menu-language">
+    <i class="fa-solid fa-language"></i>
+    <h3>{{getTranslation('changeLanguage')}}</h3>
+  </div>
+  <div class="menu-item">
+    <i class="fa-solid fa-circle-question"></i>
+    <h3>{{getTranslation('help')}}</h3>
+  </div>
+  <div class="menu-item" *ngIf="checkAuth()" (click)="logout()">
+    <i class="fa-solid fa-sign-out"></i>
+    <h3>{{getTranslation('logout')}}</h3>
+  </div>
 
-
-
-
+</div>
