--- a/frontend/src/app/components/nav/navbar/navbar.component.css
+++ b/frontend/src/app/components/nav/navbar/navbar.component.css
@@ -9,6 +9,23 @@
   box-shadow: 10px 10px 50px rgba(10, 11, 0, 0.8);
 
 }
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  padding: 0;
+  background-color: rgba(0, 0, 0, 0);
+  transition: background-color 0.5s ease;
+  z-index: -1;
+}
+
+.overlay.dimmed {
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: 10;
+}
+
 
 .left-container {
   display: flex;
@@ -89,17 +106,6 @@
 }
 
 
-
-.overlay {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.45);
-  z-index: 99;
-  display: none;
-}
 
 @media (max-width: 1024px) {
   .menu {
