--- a/frontend/src/app/components/nav/navbar/navbar.component.css
+++ b/frontend/src/app/components/nav/navbar/navbar.component.css
@@ -33,6 +33,13 @@
 
 }
 
+.fa-angle-left {
+  font-size: 30px;
+  color: #ff7300;
+  cursor: pointer;
+  margin-right: 15px;
+}
+
 .left-container h2 {
   background: linear-gradient(to top, #ff0000, #ff7e5f, #ffa500, #feb47b );
   -webkit-background-clip: text;
