--- a/frontend/src/app/components/nav/navbar/navbar.component.css
+++ b/frontend/src/app/components/nav/navbar/navbar.component.css
@@ -6,7 +6,7 @@
   background: whitesmoke;
   color: black;
   width: auto;
-  box-shadow: 10px 10px 50px rgba(10, 11, 0, 0.8);
+  box-shadow: 10px 10px 50px rgba(157, 157, 156, 0.8);
 
 }
 .overlay {
@@ -46,10 +46,93 @@
   -webkit-text-fill-color: transparent;
 }
 
+.logo {
+  width: 40px;
+  height: 40px;
+  padding-right: 10px;
+}
+
+
+.mid-container {
+  display: flex;
+  align-items: center;
+  flex-direction: row;
+  width: auto;
+  height: auto;
+}
+
+.address-container {
+  display: flex;
+  align-items: center;
+  flex-direction: row;
+  width: auto;
+  height: 17px;
+  padding: 8px;
+  background: #dcdbdb;
+  border-radius: 20px;
+  margin-right: 20px;
+}
+
+.fa-location-dot {
+  color: #ff7300;
+  margin-right: 10px;
+
+}
+
+.address-container h4{
+  font-size: 13px;
+}
+
+.delivery-container {
+  display: flex;
+  align-items: center;
+  flex-direction: row;
+  width: auto;
+  height: auto;
+  padding: 3px;
+  background: #dcdbdb;
+  border-radius: 20px;
+  margin-right: 20px;
+}
+
+.delivery-option {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: row;
+  border-radius: 20px;
+  background: #dcdbdb;
+  height: 30px;
+  width: 120px;
+  border: none;
+  cursor: pointer;
+}
+
+.delivery-option h4 {
+  font-size: 13px;
+  margin-left: 5px;
+}
+
+.delivery-option.selected {
+  background: white;
+  color: black;
+}
+
+.fa-solid.selected {
+  color: #ff7300;
+
+}
+
+.right-container {
+  display: flex;
+  align-items: center;
+  flex-direction: row;
+}
+
 .language-switcher {
   width: 30px;
   height: 30px;
-  margin-left: 70px;
+  margin-right: 30px;
   align-items: center;
   display: flex;
 
@@ -64,7 +147,7 @@
 
 .language-dropdown {
   top: 80px;
-  left: 200px;
+  left: 1270px;
   width: auto;
   padding: 10px 30px;
   text-align: center;
@@ -91,19 +174,6 @@
   height: 24px;
   margin-right: 20px;
 }
-
-.right-container {
-  display: flex;
-  align-items: center;
-  flex-direction: row;
-}
-
-.logo {
-  width: 40px;
-  height: 40px;
-  padding-right: 10px;
-}
-
 
 .material-icons {
   font-size: 30px;
