--- a/frontend/src/app/components/nav/navbar/navbar.component.html
+++ b/frontend/src/app/components/nav/navbar/navbar.component.html
@@ -1,13 +1,34 @@
 <div class="nav-container">
   <div class="left-container">
     <ng-container *ngIf="currentRoute === '/restaurants'">
-      <i  class="fa-solid fa-angle-left" [routerLink]="['/']"></i>
+      <i  class="fa-solid fa-angle-left" (click)="goToHome()"></i>
     </ng-container>
     <img class="logo" [src]="apiUrl + logo" alt="Your Image">
     <h2>Webstaurator</h2>
-    <div class="language-switcher" *ngIf="showLanguageOption" (click)="toggleLanguageDropdown()">
-      <img [src]="apiUrl + currentFlag" alt="Current LanguageInterface Flag">
+
+  </div>
+
+  <div class="mid-container" *ngIf="currentRoute === '/restaurants'">
+    <div class="address-container">
+      <i class="fa-solid fa-location-dot"></i>
+      <h4> {{address}} </h4>
     </div>
+    <div class="delivery-container">
+        <button class="delivery-option" [ngClass]="{'selected' : selectedOption === 'delivery'}" (click)="selectOption('delivery')">
+          <i class="fa-solid fa-bicycle" [ngClass]="{'selected' : selectedOption === 'delivery'}"></i>
+          <h4>{{getTranslation('delivery')}} </h4>
+        </button>
+        <button class="delivery-option" [ngClass]="{'selected' : selectedOption === 'pickup'}" (click)="selectOption('pickup')">
+          <i class="fa-solid fa-store" [ngClass]="{'selected' : selectedOption === 'pickup'}"></i>
+          <h4>{{getTranslation('pickup')}} </h4>
+        </button>
+    </div>
+  </div>
+
+  <div class="right-container">
+    <div class="language-switcher" *ngIf="showLanguageOption" (click)="toggleLanguageDropdown()">
+    <img [src]="apiUrl + currentFlag" alt="Current LanguageInterface Flag">
+  </div>
     <div class="language-dropdown" *ngIf="showLanguageDropdown">
       <h3>{{getTranslation('chooseLanguage')}}</h3>
       <div class="language-option" (click)="setLanguage('pl')">
@@ -19,9 +40,9 @@
         <span>{{getTranslation('english')}}</span>
       </div>
     </div>
-  </div>
-  <div class="right-container">
+
     <i class="material-icons menu-button" [routerLink]="[]" fragment="menu">menu</i>
+
   </div>
 
 </div>
