Category view done

--- a/frontend/src/app/components/nav/navbar/navbar.component.css
+++ b/frontend/src/app/components/nav/navbar/navbar.component.css
@@ -106,6 +106,7 @@
   width: 120px;
   border: none;
   cursor: pointer;
+  transition: background 0.7s ease, color 0.7s ease;
 }
 
 .delivery-option h4 {
