--- a/frontend/src/app/components/resturants-components/category-item/category-item.component.html
+++ b/frontend/src/app/components/resturants-components/category-item/category-item.component.html
@@ -1,2 +1,2 @@
-  <img *ngIf="image" [src]="image" alt="{{name}}" class="category-image"/>
+  <img *ngIf="photo" [src]="photo" alt="{{name}}" class="category-image"/>
   <h3>{{name}}</h3>
