--- a/frontend/src/app/components/nav/navbar/navbar.component.css
+++ b/frontend/src/app/components/nav/navbar/navbar.component.css
@@ -1,12 +1,19 @@
 .nav-container {
   display: flex;
+  flex-direction: column;
   justify-content: space-between;
   align-items: center;
   padding: 5px 30px;
-  background: whitesmoke;
+  background: white;
   color: black;
   width: auto;
-  box-shadow: 10px 10px 50px rgba(157, 157, 156, 0.8);
+}
+
+.nav-main {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
 
 }
 .overlay {
@@ -68,7 +75,7 @@
   width: auto;
   height: 17px;
   padding: 8px;
-  background: #dcdbdb;
+  background: #f1f1f1;
   border-radius: 20px;
   margin-right: 20px;
 }
@@ -90,7 +97,7 @@
   width: auto;
   height: auto;
   padding: 3px;
-  background: #dcdbdb;
+  background: #f1f1f1;
   border-radius: 20px;
   margin-right: 20px;
 }
@@ -101,7 +108,7 @@
   justify-content: center;
   flex-direction: row;
   border-radius: 20px;
-  background: #dcdbdb;
+  background: #f1f1f1;
   height: 30px;
   width: 120px;
   border: none;
