--- a/frontend/src/app/components/resturants-components/category-item/category-item.component.css
+++ b/frontend/src/app/components/resturants-components/category-item/category-item.component.css
@@ -1,7 +1,11 @@
-
 .category-image {
   width: 90%;
-  height: 90px;
+  height: 60%;
   object-fit: cover;
   border-radius: 20px;
+}
+
+h3 {
+  font-weight: normal;
+  font-size: 14px;
 }
