--- a/frontend/src/app/components/resturants-components/restaurant/restaurant.component.css
+++ b/frontend/src/app/components/resturants-components/restaurant/restaurant.component.css
@@ -43,7 +43,7 @@
 .search-input {
   border: 1px solid #a29f9f;
   width: 800px;
-  height: 50px;
+  height: 60px;
   outline: none;
   padding: 0 20px;
   font-size: 16px;
@@ -57,6 +57,7 @@ h3 {
   font-weight: bold;
   margin-top: 30px;
   margin-left: 15px;
+  margin-bottom: -10px;
 }
 
 .restaurants {
