--- a/frontend/src/app/components/resturants-components/restaurant-item/restaurant-item.component.html
+++ b/frontend/src/app/components/resturants-components/restaurant-item/restaurant-item.component.html
@@ -1,4 +1,4 @@
-<div class="restaurant-item">
+<div class="restaurant-item" (click)="goToMenu(restaurant)">
   <img class="image" [src]="restaurant.imageUrl" alt="restaurant image" />
   <img class="logo" [src]="restaurant.logoUrl" alt="restaurant logo" />
   <div class="rating-container">
