--- a/frontend/src/app/components/restaurant-menu-components/restaurant-basket/restaurant-basket.component.css
+++ b/frontend/src/app/components/restaurant-menu-components/restaurant-basket/restaurant-basket.component.css
@@ -80,3 +80,67 @@ h5 {
   font-weight: normal;
   margin: 0;
 }
+
+.cart-container {
+  display: flex;
+  flex-direction: column;
+  width: 95%;
+  max-height: 43%;
+  margin-top: 20px;
+  border-radius: 20px;
+  overflow-y: auto;
+}
+
+.summary-container {
+  width: 85%;
+  height: auto;
+  display: flex;
+  flex-direction: column;
+}
+
+.first-container {
+  width: 100%;
+  height: 30px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  font-size: 15px;
+}
+
+.total {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  margin-top: 10px;
+  align-content: center;
+  font-size: 15px;
+  font-weight: bold;
+  border-top: 1px solid #d2d2d2; /* Add this line */
+}
+
+.order-item {
+  width: 100%;
+  height: auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  border-bottom: 1px solid #d2d2d2 ; /* Add this line */
+}
+
+.order-button {
+  width: 80%;
+  background: #fd710c;
+  color: white;
+  height: 50px;
+  border: none;
+  border-radius: 40px;
+  font-size: 18px;
+  cursor: pointer;
+  font-weight: bolder;
+  align-self: center; /* Center the button horizontally */
+}
+
+order-button:hover {
+  background: #ce5c03;
+}
