--- a/frontend/src/app/components/restaurant-menu-components/restaurant-basket/restaurant-basket.component.html
+++ b/frontend/src/app/components/restaurant-menu-components/restaurant-basket/restaurant-basket.component.html
@@ -18,10 +18,37 @@
     </button>
   </div>
 
-  <ng-container *ngIf="order === null">
+  <ng-container *ngIf="orders.length === 0">
     <i class="fa-solid fa-basket-shopping"></i>
     <h2> {{getTranslation('basketEmpty')}}</h2>
     <h5> {{getTranslation('didntAdd')}}</h5>
+  </ng-container>
+
+  <ng-container *ngIf="orders.length > 0">
+    <div class="cart-container">
+      <app-restaurant-basket-item
+        [order]="order"
+        *ngFor="let order of orders"
+        class="order-item"
+      ></app-restaurant-basket-item>
+    </div>
+
+    <div class="summary-container">
+      <div class="first-container">
+        <p>{{getTranslation('together')}}</p>
+        <p>{{ ordersPrice | number:'1.2-2'}} zł</p>
+      </div>
+      <div class="first-container">
+       <p>{{getTranslation('deliveryCost')}}</p>
+        <p>{{deliveryPrice | number: '1.2-2'}} zł</p>
+      </div>
+      <div class="total">
+        <h3>{{getTranslation('total')}}</h3>
+        <h3>{{totalPrice | number: '1.2-2'}} zł</h3>
+      </div>
+      <button class="order-button" type="submit">{{getTranslation('orderNow')}} ({{totalPrice | number: '1.2-2'}} zł)</button>
+    </div>
+
   </ng-container>
 
 </div>
