--- a/frontend/src/app/components/restaurant-menu-components/menu-category-item/menu-category-item.component.css
+++ b/frontend/src/app/components/restaurant-menu-components/menu-category-item/menu-category-item.component.css
@@ -3,7 +3,7 @@
     height: 100%;
     padding: 10px;
     margin: 5px;
-    background-color: transparent;
+    background-color: white;
     color: #000;
     font-size: 18px;
     cursor: pointer;
@@ -13,6 +13,7 @@
     border-radius: 20px;
     z-index: auto;
     border: 1px solid #b4b2b2;
+
 }
 
 .category-button:hover {
