--- a/frontend/src/app/components/restaurant-menu-components/restaurant-main/restaurant-main.component.css
+++ b/frontend/src/app/components/restaurant-menu-components/restaurant-main/restaurant-main.component.css
@@ -1,9 +1,18 @@
-.info-container {
+.image-background {
   position: relative;
-  transform: translate(0%, -120%); /* Center the container */
+  top: 50px;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  filter: blur(12px);
+  object-fit: contain; /* Ensure the image fits within the container without covering it */
+}
+
+.info-container {
+  margin-top: 50px;
+  position: relative;
   display: flex;
   flex-direction: row;
-  align-items: center;
   width: 80%;
   background: rgba(255, 255, 255, 0.8); /* Optional: Add a background for better readability */
   padding: 20px;
@@ -72,7 +81,7 @@ h5 {
 
 .fa-heart {
   font-size: 20px;
-  background: #f8f9fa;
+  background: #ffffff;
   margin-right: 15px;
   padding: 10px;
   border-radius: 50%;
@@ -80,7 +89,7 @@ h5 {
 
 .fa-info {
   font-size: 20px;
-  background: #f8f9fa;
+  background: #ffffff;
   padding: 10px 15px 10px 15px;
   border-radius: 50%;
 }
@@ -97,7 +106,7 @@ h5 {
   width: 100%;
   height: auto;
   padding-bottom: 60px;
-  transform: translate(0%, -270px); /* Center the container */
+  margin-top: 10px;
 
 }
 
@@ -139,4 +148,8 @@ h5 {
   width: 90%;
   height: 100%;
   border-radius: 30px;
+}
+
+.favourite {
+  color: red;
 }
