--- a/frontend/src/app/components/restaurant-menu-components/restaurant-main/restaurant-main.component.html
+++ b/frontend/src/app/components/restaurant-menu-components/restaurant-main/restaurant-main.component.html
@@ -20,7 +20,7 @@
   </div>
 
   <div class="icons-container">
-    <i class="fa-regular fa-heart" (click)="toggleFavorite()"></i>
+    <i class="fa-solid fa-heart" [class.favourite]="isFavorite" (click)="toggleFavourite()"></i>
     <i class="fa-solid fa-info"></i>
   </div>
 </div>
