--- a/frontend/src/app/components/restaurant-menu-components/restaurant-menu/restaurant-menu.component.css
+++ b/frontend/src/app/components/restaurant-menu-components/restaurant-menu/restaurant-menu.component.css
@@ -11,7 +11,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  justify-content: flex-end;
   width: 100%;
   height: 100%;
   background: whitesmoke;
@@ -23,34 +23,28 @@
 }
 
 .image-background {
-  display: flex;
-  flex-direction: column;
-  width: 100vw; /* Ensure it covers the full viewport width */
-  height: 800px; /* Set fixed height */
-  position: relative;
-  object-fit: cover;
-  top: 200px;
-  filter: blur(12px);
-  background-size: cover; /* Ensure the image covers the container */
-  background-position: center; /* Center the image */
-}
-
-.basket {
-  display: flex;
-  flex-direction: row;
-  align-items: flex-end;
-  width: 450px;
+  position: fixed;
+  width: 100%;
   height: 100%;
-  z-index: 1;
-
+  filter: blur(10px);
+  object-fit: cover; /* Ensure the image covers the entire screen */
+  z-index: 0; /* Ensure the image stays in the background */
 }
 
 .main-container {
+
   display: flex;
   flex-direction: column;
   align-items: center;
   width: 1100px;
   height: 100%;
-  margin-top: 300px;
-  z-index: 1;
+  z-index: 1; /* Ensure the main container is above the background image */
+}
+
+.basket {
+  display: flex;
+  width: 480px;
+  height: 90%;
+  z-index: 1; /* Ensure the basket is above the background image */
+  align-self: flex-start; /* Align the basket to the top */
 }
